--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
     <head>
-        <title>Deposits and Withdrawals</title>
+        <title>Weather App</title>
     </head>
     <body>
-        <h1>Top 3 Transactions</h1>
-        <ul class="js-top-transactions">
+        <h1>weather App</h1>
+        <ul class="js-city-weather">
         </ul>
         <!-- Run 
              npm install
@@ -16,6 +16,6 @@
              
              http://localhost:8000/index.html
               -->
-        <script src="dist/myaccount.dist.js"></script>
+        <script src="dist/weatherapp.dist.js"></script>
     </body>
 </html>
